# parse-dont-pray

./: .gitignore  DESCRIPTION  README.md  _quarto.yml  index.qmd  index.quarto_ipynb  llms-full.txt  llms.txt  meta-tags.html  pyproject.toml  robots.txt  sitemap.xml  style.css
.github/workflows/: build-presentation.yaml
.well-known/: llms-full.txt  llms.txt
