[project]
name = "parse-dont-pray"
version = "1.0.0"
description = "A presentation exploring the benefits of data validation libraries like Pydantic and Zod"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "CC0 1.0 Universal" }
authors = [
    { name = "Indrajeet Patil", email = "patilindrajeet.science@gmail.com" }
]
keywords = [
    "data-validation",
    "pydantic",
    "zod",
    "python",
    "typescript",
    "software-engineering",
    "type-safety"
]
dependencies = ["jupyter>=1.1.1", "ipykernel>=7.2.0", "matplotlib>=3.10.8"]

[tool.uv]
required-version = ">=0.11.2"

[dependency-groups]
dev = []
